<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_app"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="@dimen/_32sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_sprout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            app:layout_constraintBottom_toTopOf="@id/layout_register_bottom"
            app:layout_constraintTop_toBottomOf="@id/img_app"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/txt_user_name_title"
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layout_input_phone"
                style="@style/InputForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/txt_user_name_title">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/edt_email"
                    style="@style/EditTextPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="true"
                    android:hint="@string/hint_input_phone"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_password_title"
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_input_phone" />

            <LinearLayout
                android:id="@+id/layout_input_password"
                style="@style/InputForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/txt_password_title">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_lock_password" />

                <EditText
                    android:id="@+id/edt_password"
                    style="@style/EditTextPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="true"
                    android:hint="@string/hint_input_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/img_eye"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_eye" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_login"
                style="@style/TextSubmitPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:text="@string/txt_login"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/layout_input_password"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/txt_reset_password"
                style="@style/TextPrimaryMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_register_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="36dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                style="@style/TextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_are_have_not_account" />

            <TextView
                android:layout_marginStart="4dp"
                android:id="@+id/txt_register"
                style="@style/TextPrimaryMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>